# catalogo_bienes_servicios

./: .gitignore  Cargo.toml  README.md  check_simd.rs  doc_warnings.txt
algoritmos/hamming/: Cargo.toml  catalog.rs  error.rs  hamming_benchmark.rs  hamming_trait.rs  integration.rs  lib.rs  simd.rs  test_simd.rs  types.rs
algoritmos/jaccard/: Cargo.toml  jaccard.rs
algoritmos/jaro-winkler/: Cargo.toml  jaro_winkler.rs  test.rs
algoritmos/jaro-winkler/tests/: integration.rs
algoritmos/phonetic_index/: Cargo.toml  index.rs  lib.rs  main.rs  normalizer.rs  phonetic_core.rs
algoritmos/similitud_coseno/: embedding_bridge.rs  index.rs  main.rs  mod.rs
algoritmos/similitud_coseno/semantic_engine/: Cargo.toml
algoritmos/similitud_coseno/semantic_engine/src/: lib.rs
algoritmos/similitud_coseno/semantic_engine/src/embedding_bridge/: mod.rs
algoritmos/similitud_coseno/semantic_engine/src/index/: mod.rs
algoritmos/similitud_coseno/semantic_engine/src/vector_math/: mod.rs
algoritmos/sørensen_dice/: Cargo.toml  lib.rs  main.rs
algoritmos/true_damerau_levenshtein/: Cargo.toml  amerau_levenshtein.rs  error.rs  index.rs  lib.rs  main.rs  metric.rs  mod.rs  normalization.rs  prelude.rs  trait.rs  types.rs
frontend/: CMakeLists.txt  Main.qml  SearchModel.cpp  SearchModel.h  main.cpp
rust_engine/: Cargo.toml  build.rs
rust_engine/src/: lib.rs
