[workspace]
resolver = "2"
members = [
    "algoritmos/hamming",
    "algoritmos/jaccard",
    "algoritmos/jaro-winkler",
    "algoritmos/phonetic_index",
    "algoritmos/similitud_coseno/semantic_engine",
    "algoritmos/sørensen_dice",
    "algoritmos/true_damerau_levenshtein",
    "rust_engine",
]

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
# target-cpu = "native" # No es válido aquí, mover a .cargo/config.toml si es necesario