[package]
name = "rust_engine"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
cxx = "1.0"
rayon = "1.10"
csv = "1.3"
serde = { version = "1.0", features = ["derive"] }
# Enlaces a tus módulos de algoritmos
hamming_hpc_engine = { path = "../algoritmos/hamming" }
fuzzy_search_engine = { path = "../algoritmos/true_damerau_levenshtein" }
phonetic_index = { path = "../algoritmos/phonetic_index" }
sorensen_dice_engine = { path = "../algoritmos/sørensen_dice" }
jaccard_engine = { path = "../algoritmos/jaccard" }

[build-dependencies]
cxx-build = "1.0"
