[package]
name = "hamming-hpc-engine"
version = "0.1.0"
edition = "2021"
authors = ["HPC Systems Programmer <hpc@example.com>"]
description = "Ultra-efficient Hamming Distance engine for 64K catalog validation"
license = "MIT OR Apache-2.0"
rust-version = "1.78"
[lib]
name = "hamming_hpc_engine"
path = "lib.rs"

[dependencies]
rand = "0.8"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"

[[bench]]
name = "hamming_benchmark"
harness = false
