[package]
name = "sorensen-dice-engine"
version = "0.1.0"
edition = "2021"

[lib]
name = "sorensen_dice_engine"
path = "lib.rs"

[[bin]]
name = "sorensen_dice_demo"
path = "main.rs"

[dependencies]
unicode-segmentation = "1.10.1"
ahash = "0.8.3" # Hash no criptográfico extremadamente rápido
rayon = "1.8.0" # Concurrencia data-parallel