[package]
name = "fuzzy_search_engine"
version = "0.1.0"
edition = "2021"
authors = ["Low-Latency Systems Team"]
description = "High-performance fuzzy search engine with True Damerau-Levenshtein metric"
license = "MIT"
[lib]
name = "fuzzy_search_engine"
path = "lib.rs"

[dependencies]
# Unicode handling: grapheme clusters & normalization [[21]][[23]]
unicode-normalization = "0.1"
unicode-segmentation = "1.10"

# Parallel processing with zero-cost abstractions [[38]]
rayon = "1.8"

# Error handling with derive macro
thiserror = "1.0"
rand = "0.8"

# Optional: for benchmarking
criterion = { version = "0.5", optional = true }

[features]
default = []
bench = ["criterion"]